query events and disply them

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowUnreachableCode": false,
-    "noUnusedLocals": true,
+    // "noUnusedLocals": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
